# Lifestoryteller

./: .gitignore  README.md  docker-compose.yml  generate_docker_configs.py  package-lock.json  package.json
actions/: test.actions.ts
backend/: .gitignore  Dockerfile  agents.py  check.py  crew.py  db.py  main.py  middleware.py  models.py  pyproject.toml  run_migrations.py  tasks.py  test_agents.py  test_mongodb.py  test_s3.py  tools.py
backend/utils/: job_manager.py  log_config.py
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  typing.ts
frontend/actions/: test.actions.ts
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/app/albums/: page.tsx
frontend/app/albums/[id]/: page.tsx
frontend/app/api/all-albums/: route.ts
frontend/app/api/all-photos/: route.ts
frontend/app/api/generate-album/: route.ts
frontend/app/api/recent-albums/: route.ts
frontend/app/api/recent-photos/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/lib/: config.ts
frontend/app/photos/: page.tsx
frontend/components/: AlbumList.tsx  GenerateAlbum.tsx  Header.tsx  RecentAlbums.tsx  RecentPhotos.tsx  UploadPhoto.tsx
frontend/components/ui/: checkbox.tsx
frontend/lib/: mongooseConnect.ts  utils.ts
frontend/pages/api/: albums.ts  all-albums.ts  all-photos.ts  generate-album.ts  recent-albums.ts  recent-photos.ts  upload.ts
frontend/pages/api/albums/: [id].ts  bulk-delete.ts
frontend/pages/api/download-video/: [id].ts
frontend/utils/: api.ts
lib/: mongodb.ts
(+7 files in other folders)
