[tool.poetry]
name = "family-book"
version = "0.1.0"
description = ""
authors = ["Asako Hayase <asako.ch.ha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
