[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Asako Hayase <asako.ch.ha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
crewai = "^0.55.2"
logger = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
