[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Asako Hayase <asako.ch.ha@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
crewai = "^0.55.2"
logger = "^1.4"
langchain = ">=0.2,<=0.3"
pillow = "^10.4.0"
qdrant-client = "^1.11.1"
torch = "^2.4.1"
transformers = "^4.44.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
